--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 23:05:02 2018</p>
+         Last Run: Wed Nov 28 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -31,30 +31,30 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>-4</td>
-                        <td>-8</td>
+                        <td>-3</td>
+                        <td>-7</td>
                         <td>5</td>
                         <td>79</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>9</td>
+                        <td>29</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Clear</td>
-                        <td>-5</td>
-                        <td>-9</td>
+                        <td>Partly Cloudy</td>
+                        <td>-4</td>
+                        <td>-7</td>
                         <td>5</td>
-                        <td>80</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>17</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>-6</td>
                         <td>-10</td>
                         <td>5</td>
@@ -62,7 +62,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>23</td>
+                        <td>32</td>
                      </tr>
                   </tbody>
                </table>
@@ -89,8 +89,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-8",
-                 "-9",
+                 "-7",
+                 "-7",
                  "-10"
                ]
              },
@@ -101,8 +101,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
+                 "-3",
                  "-4",
-                 "-5",
                  "-6"
                ]
              }
@@ -172,7 +172,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "79",
-                 "80",
+                 "81",
                  "84"
                ]
              },
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "9",
-                 "17",
-                 "23"
+                 "29",
+                 "30",
+                 "32"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 23:05:02 2018</p>
+         Last Run: Wed Nov 28 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -245,39 +245,39 @@
                   <tbody>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>24</td>
-                        <td>78</td>
+                        <td>47</td>
+                        <td>83</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>N</td>
-                        <td>74</td>
+                        <td>94</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>23</td>
-                        <td>74</td>
+                        <td>38</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
-                        <td>73</td>
+                        <td>94</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Snow Showers</td>
                         <td>-3</td>
-                        <td>-6</td>
-                        <td>23</td>
-                        <td>72</td>
+                        <td>-7</td>
+                        <td>39</td>
+                        <td>78</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>NNE</td>
-                        <td>72</td>
+                        <td>94</td>
                      </tr>
                   </tbody>
                </table>
@@ -306,7 +306,7 @@
                "data":[
                  "-7",
                  "-6",
-                 "-6"
+                 "-7"
                ]
              },
              {
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "24",
-                 "23",
-                 "23"
+                 "47",
+                 "38",
+                 "39"
                ]
              },
              {
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "78",
-                 "74",
-                 "72"
+                 "83",
+                 "79",
+                 "78"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "74",
-                 "73",
-                 "72"
+                 "94",
+                 "94",
+                 "94"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 23:05:02 2018</p>
+         Last Run: Wed Nov 28 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -460,39 +460,39 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
+                        <td>Snow Showers</td>
+                        <td>-5</td>
+                        <td>-5</td>
+                        <td>34</td>
+                        <td>82</td>
+                        <td>0</td>
+                        <td>5</td>
+                        <td>ENE</td>
+                        <td>86</td>
+                     </tr>
+                     <tr>
+                        <td>01:00 PM</td>
                         <td>Overcast</td>
                         <td>-5</td>
                         <td>-5</td>
-                        <td>24</td>
-                        <td>82</td>
+                        <td>23</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>5</td>
                         <td>ENE</td>
                         <td>85</td>
                      </tr>
                      <tr>
-                        <td>01:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>-5</td>
-                        <td>-8</td>
-                        <td>24</td>
-                        <td>78</td>
-                        <td>0</td>
-                        <td>6</td>
-                        <td>NE</td>
-                        <td>79</td>
-                     </tr>
-                     <tr>
                         <td>02:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>23</td>
+                        <td>34</td>
                         <td>73</td>
                         <td>0</td>
                         <td>6</td>
                         <td>NE</td>
-                        <td>75</td>
+                        <td>84</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,7 +520,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-5",
-                 "-8",
+                 "-5",
                  "-7"
                ]
              },
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "24",
-                 "24",
-                 "23"
+                 "34",
+                 "23",
+                 "34"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "86",
                  "85",
-                 "79",
-                 "75"
+                 "84"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 23:05:02 2018</p>
+         Last Run: Wed Nov 28 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -676,38 +676,38 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-12</td>
-                        <td>-17</td>
-                        <td>5</td>
+                        <td>-11</td>
+                        <td>-16</td>
+                        <td>6</td>
                         <td>83</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>36</td>
+                        <td>56</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-12</td>
                         <td>-17</td>
-                        <td>4</td>
+                        <td>6</td>
                         <td>82</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>WSW</td>
-                        <td>37</td>
+                        <td>W</td>
+                        <td>57</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-12</td>
                         <td>-17</td>
-                        <td>4</td>
-                        <td>81</td>
+                        <td>6</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>39</td>
+                        <td>59</td>
                      </tr>
                   </tbody>
                </table>
@@ -734,7 +734,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-17",
+                 "-16",
                  "-17",
                  "-17"
                ]
@@ -746,7 +746,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-12",
+                 "-11",
                  "-12",
                  "-12"
                ]
@@ -805,9 +805,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "5",
-                 "4",
-                 "4"
+                 "6",
+                 "6",
+                 "6"
                ]
              },
              {
@@ -818,7 +818,7 @@
                "data":[
                  "83",
                  "82",
-                 "81"
+                 "83"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "36",
-                 "37",
-                 "39"
+                 "56",
+                 "57",
+                 "59"
                ]
              }
            ]
