--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 00:05:02 2018</p>
+         Last Run: Wed Nov 28 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -32,37 +32,37 @@
                         <td>09:00 PM</td>
                         <td>Clear</td>
                         <td>-3</td>
-                        <td>-7</td>
-                        <td>5</td>
+                        <td>-6</td>
+                        <td>4</td>
                         <td>79</td>
                         <td>0</td>
-                        <td>10</td>
-                        <td>WSW</td>
-                        <td>29</td>
+                        <td>8</td>
+                        <td>W</td>
+                        <td>25</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-4</td>
                         <td>-7</td>
                         <td>5</td>
-                        <td>81</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>30</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-6</td>
                         <td>-10</td>
                         <td>5</td>
-                        <td>84</td>
+                        <td>86</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>32</td>
+                        <td>20</td>
                      </tr>
                   </tbody>
                </table>
@@ -89,7 +89,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-7",
+                 "-6",
                  "-7",
                  "-10"
                ]
@@ -160,7 +160,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "5",
+                 "4",
                  "5",
                  "5"
                ]
@@ -172,8 +172,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "79",
-                 "81",
-                 "84"
+                 "82",
+                 "86"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "29",
-                 "30",
-                 "32"
+                 "25",
+                 "21",
+                 "20"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 00:05:02 2018</p>
+         Last Run: Wed Nov 28 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 00:05:02 2018</p>
+         Last Run: Wed Nov 28 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -461,38 +461,38 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Snow Showers</td>
-                        <td>-5</td>
-                        <td>-5</td>
-                        <td>34</td>
-                        <td>82</td>
+                        <td>-6</td>
+                        <td>-9</td>
+                        <td>36</td>
+                        <td>84</td>
                         <td>0</td>
-                        <td>5</td>
-                        <td>ENE</td>
-                        <td>86</td>
+                        <td>6</td>
+                        <td>NNE</td>
+                        <td>92</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Overcast</td>
                         <td>-5</td>
-                        <td>-5</td>
-                        <td>23</td>
-                        <td>78</td>
+                        <td>-8</td>
+                        <td>24</td>
+                        <td>81</td>
                         <td>0</td>
-                        <td>5</td>
-                        <td>ENE</td>
-                        <td>85</td>
+                        <td>6</td>
+                        <td>NNE</td>
+                        <td>92</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Snow Showers</td>
-                        <td>-4</td>
-                        <td>-7</td>
-                        <td>34</td>
-                        <td>73</td>
+                        <td>-5</td>
+                        <td>-8</td>
+                        <td>35</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>NE</td>
-                        <td>84</td>
+                        <td>NNE</td>
+                        <td>92</td>
                      </tr>
                   </tbody>
                </table>
@@ -519,9 +519,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-5",
-                 "-5",
-                 "-7"
+                 "-9",
+                 "-8",
+                 "-8"
                ]
              },
              {
@@ -531,9 +531,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
+                 "-6",
                  "-5",
-                 "-5",
-                 "-4"
+                 "-5"
                ]
              }
            ]
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "34",
-                 "23",
-                 "34"
+                 "36",
+                 "24",
+                 "35"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "82",
-                 "78",
-                 "73"
+                 "84",
+                 "81",
+                 "77"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "86",
-                 "85",
-                 "84"
+                 "92",
+                 "92",
+                 "92"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 00:05:02 2018</p>
+         Last Run: Wed Nov 28 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -679,14 +679,26 @@
                         <td>-11</td>
                         <td>-16</td>
                         <td>6</td>
-                        <td>83</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>WSW</td>
-                        <td>56</td>
+                        <td>WNW</td>
+                        <td>44</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>-11</td>
+                        <td>-16</td>
+                        <td>6</td>
+                        <td>79</td>
+                        <td>0</td>
+                        <td>8</td>
+                        <td>WNW</td>
+                        <td>36</td>
+                     </tr>
+                     <tr>
+                        <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-12</td>
                         <td>-17</td>
@@ -695,19 +707,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>57</td>
-                     </tr>
-                     <tr>
-                        <td>11:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-12</td>
-                        <td>-17</td>
-                        <td>6</td>
-                        <td>83</td>
-                        <td>0</td>
-                        <td>8</td>
-                        <td>W</td>
-                        <td>59</td>
+                        <td>33</td>
                      </tr>
                   </tbody>
                </table>
@@ -735,7 +735,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-16",
-                 "-17",
+                 "-16",
                  "-17"
                ]
              },
@@ -747,7 +747,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-11",
-                 "-12",
+                 "-11",
                  "-12"
                ]
              }
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "83",
-                 "82",
-                 "83"
+                 "80",
+                 "79",
+                 "82"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "56",
-                 "57",
-                 "59"
+                 "44",
+                 "36",
+                 "33"
                ]
              }
            ]
