--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 02:05:03 2018</p>
+         Last Run: Wed Nov 28 03:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -30,15 +30,15 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
                         <td>4</td>
-                        <td>80</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>25</td>
+                        <td>39</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -46,11 +46,11 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>5</td>
-                        <td>82</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>21</td>
+                        <td>27</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -62,7 +62,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>19</td>
+                        <td>25</td>
                      </tr>
                   </tbody>
                </table>
@@ -171,8 +171,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "80",
-                 "82",
+                 "78",
+                 "81",
                  "85"
                ]
              },
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "25",
-                 "21",
-                 "19"
+                 "39",
+                 "27",
+                 "25"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 02:05:03 2018</p>
+         Last Run: Wed Nov 28 03:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -248,7 +248,7 @@
                         <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>50</td>
+                        <td>51</td>
                         <td>83</td>
                         <td>0</td>
                         <td>8</td>
@@ -258,13 +258,13 @@
                      <tr>
                         <td>02:00 PM</td>
                         <td>Snow Showers</td>
-                        <td>-3</td>
-                        <td>-7</td>
+                        <td>-4</td>
+                        <td>-8</td>
                         <td>40</td>
                         <td>80</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>N</td>
+                        <td>NNE</td>
                         <td>94</td>
                      </tr>
                      <tr>
@@ -305,7 +305,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-7",
-                 "-7",
+                 "-8",
                  "-7"
                ]
              },
@@ -317,7 +317,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-4",
-                 "-3",
+                 "-4",
                  "-3"
                ]
              }
@@ -375,7 +375,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "50",
+                 "51",
                  "40",
                  "40"
                ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 02:05:03 2018</p>
+         Last Run: Wed Nov 28 03:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 02:05:03 2018</p>
+         Last Run: Wed Nov 28 03:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
